--- a/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
@@ -1,94 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        tools:context=".ui.artGalleryDetail.ArtDetailFragment">
+        android:padding="20dp">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/art_detail_cv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            android:layout_margin="20dp"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintEnd_toStartOf="@id/art_detail_title_tv"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/art_detail_iv"
-                android:layout_width="390dp"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/gallery_example" />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/art_detail_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="별이 빛나는 밤"
-            android:textColor="@color/white"
-            android:layout_marginTop="80dp"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@id/art_detail_create_tv"
-            app:layout_constraintStart_toEndOf="@+id/art_detail_cv"
-            app:layout_constraintTop_toTopOf="@+id/art_detail_cv" />
-
-        <TextView
-            android:id="@+id/art_detail_author_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Vincent Van Gogh"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/art_detail_title_tv"
-            app:layout_constraintTop_toBottomOf="@+id/art_detail_title_tv" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/art_detail_save_btn"
-            style="@style/ButtonRoundShort8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="전시하기"
-            app:layout_constraintBottom_toBottomOf="@+id/art_detail_cv"
-            app:layout_constraintEnd_toEndOf="@+id/art_detail_create_tv"
-            app:layout_constraintStart_toStartOf="@+id/art_detail_title_tv"
-            app:layout_constraintTop_toBottomOf="@+id/art_detail_author_tv" />
-
-        <TextView
-            android:id="@+id/art_detail_create_tv"
-            android:layout_width="51dp"
-            android:layout_height="26dp"
-            android:text="1886"
-            android:layout_marginEnd="60dp"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/art_detail_title_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/art_detail_title_tv"
-            app:layout_constraintTop_toTopOf="@+id/art_detail_title_tv" />
-
-        <ImageButton
-            android:id="@+id/art_detail_cancel_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/art_detail_cl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/black"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_clear_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/art_detail_cv"
-            app:tint="@color/white" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:visibility="visible"
+            tools:context=".ui.artGalleryDetail.ArtDetailFragment">
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/art_detail_cv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="40dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/art_detail_title_tv"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/art_detail_iv"
+                    android:layout_width="390dp"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/gallery_example" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/art_detail_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:text="별이 빛나는 밤"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@id/art_detail_create_tv"
+                app:layout_constraintStart_toEndOf="@+id/art_detail_cv"
+                app:layout_constraintTop_toTopOf="@+id/art_detail_cv" />
+
+            <TextView
+                android:id="@+id/art_detail_author_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vincent Van Gogh"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/art_detail_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/art_detail_title_tv" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/art_detail_save_btn"
+                style="@style/ButtonRoundShort8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="40dp"
+                android:text="전시하기"
+                app:layout_constraintBottom_toBottomOf="@+id/art_detail_cv"
+                app:layout_constraintEnd_toEndOf="@+id/art_detail_create_tv"
+                app:layout_constraintStart_toStartOf="@+id/art_detail_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/art_detail_author_tv" />
+
+            <TextView
+                android:id="@+id/art_detail_create_tv"
+                android:layout_width="51dp"
+                android:layout_height="26dp"
+                android:layout_marginEnd="60dp"
+                android:text="1886"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/art_detail_title_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/art_detail_title_tv"
+                app:layout_constraintTop_toTopOf="@+id/art_detail_title_tv" />
+
+            <ImageButton
+                android:id="@+id/art_detail_cancel_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:background="@color/black"
+                android:src="@drawable/ic_clear_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/art_detail_cv"
+                app:tint="@color/white" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/art_detail_theme_cl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            android:visibility="gone"
+            tools:context=".ui.artGalleryDetail.ArtDetailFragment">
+
+            <ImageButton
+                android:id="@+id/art_detail_back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:background="@color/black"
+                android:src="@drawable/icon_arrow_back_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/art_detail_theme_tv"
+                app:tint="@color/white" />
+
+            <TextView
+                android:id="@+id/art_detail_theme_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginBottom="20dp"
+                android:text="Theme"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@id/gridLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.gridlayout.widget.GridLayout
+                android:id="@+id/gridLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="10dp"
+                android:padding="16dp"
+                app:columnCount="3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/art_detail_theme_tv"
+                app:rowCount="2">
+
+                <RadioButton
+                    android:id="@+id/radioButton1"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Option 1"
+                    app:layout_column="0"
+                    app:layout_columnWeight="1"
+                    app:layout_row="0" />
+
+                <RadioButton
+                    android:id="@+id/radioButton2"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Option 2"
+                    app:layout_column="1"
+                    app:layout_columnWeight="1"
+                    app:layout_row="0" />
+
+                <RadioButton
+                    android:id="@+id/radioButton3"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Option 3"
+                    app:layout_column="2"
+                    app:layout_columnWeight="1"
+                    app:layout_row="0" />
+
+                <RadioButton
+                    android:id="@+id/radioButton4"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Option 4"
+                    app:layout_column="0"
+                    app:layout_columnWeight="1"
+                    app:layout_row="1" />
+
+                <RadioButton
+                    android:id="@+id/radioButton5"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Option 5"
+                    app:layout_column="1"
+                    app:layout_columnWeight="1"
+                    app:layout_row="1" />
+
+                <RadioButton
+                    android:id="@+id/radioButton6"
+                    style="@style/ArtGalleryRadioBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Option 6"
+                    app:layout_column="2"
+                    app:layout_columnWeight="1"
+                    app:layout_row="1" />
+            </androidx.gridlayout.widget.GridLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/art_detail_submit_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_art_detail_border"
+                android:minHeight="0dp"
+                android:paddingVertical="8dp"
+                android:text="완료"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+
 </layout>
