--- a/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
@@ -62,6 +62,9 @@
                 android:id="@+id/viewPager"
                 android:layout_width="600dp"
                 android:layout_height="400dp"
+                android:animateLayoutChanges="false"
+                android:overScrollMode="never"
+                android:scrollbars="none"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -128,6 +131,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
             <TextView
