--- a/Android/ArtI/app/src/main/res/layout/fragment_artist_banner.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_artist_banner.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.search.ArtBannerFragment">
+        tools:context=".ui.search.ArtistBannerFragment">
 
         <ImageView
             android:id="@+id/iv_back"
@@ -18,37 +18,36 @@
             android:layout_height="28dp"
             android:layout_margin="20dp"
             android:src="@drawable/ic_arrow_back_32"
-            app:layout_constraintBottom_toBottomOf="@id/tv_art"
+            app:layout_constraintBottom_toBottomOf="@id/tv_artist"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_art" />
+            app:layout_constraintTop_toTopOf="@id/tv_artist" />
 
         <TextView
-            android:id="@+id/tv_art"
+            android:id="@+id/tv_artist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_18pt_medium"
             android:paddingBottom="4dp"
-            android:text="작품"
+            android:text="화가"
             android:textSize="28sp"
             app:layout_constraintStart_toEndOf="@id/iv_back"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_art"
-            android:layout_width="wrap_content"
+            android:id="@+id/rv_artist"
+            android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:paddingEnd="12dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:layout_marginBottom="8dp"
+            tools:listitem="@layout/item_artist"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_art"
-            app:spanCount="2"
-            tools:listitem="@layout/item_art" />
-
+            app:layout_constraintTop_toBottomOf="@id/tv_artist" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
