--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_searchFragment_to_artBannerFragment"
             app:destination="@id/artBannerFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_artistBannerFragment"
+            app:destination="@id/artistBannerFragment" />
     </fragment>
     <fragment
         android:id="@+id/artworkUploadFragment"
@@ -96,4 +99,8 @@
         android:id="@+id/artBannerFragment"
         android:name="com.hexa.arti.ui.search.ArtBannerFragment"
         android:label="ArtBannerFragment" />
+    <fragment
+        android:id="@+id/artistBannerFragment"
+        android:name="com.hexa.arti.ui.search.ArtistBannerFragment"
+        android:label="ArtistBannerFragment" />
 </navigation>
