--- a/Android/ArtI/app/src/main/res/layout/fragment_profile_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_profile_detail.xml
@@ -32,6 +32,13 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_settings_24"
+                android:elevation="10dp"
+                app:layout_constraintBottom_toBottomOf="@+id/my_page_profile_img_cv"
+                app:layout_constraintEnd_toEndOf="@+id/my_page_profile_img_cv" />
+            <ImageView
                 android:id="@+id/profile_detail_back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -156,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/shape_profile_modify_edit_text"
-                android:text="황병현"
+                android:inputType="textPassword"
                 android:layout_marginTop="10dp"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="10dp"
@@ -177,12 +184,12 @@
                 android:id="@+id/profile_pass_new_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/shape_profile_modify_edit_text"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="8dp"
                 android:layout_marginTop="10dp"
-                android:text="황병현"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profile_pass_new_tv" />
@@ -205,7 +212,7 @@
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="8dp"
                 android:layout_marginTop="10dp"
-                android:text="황병현"
+                android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profile_pass_new_check_tv" />
@@ -235,6 +242,47 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profile_pass_cancel_btn"
                 app:layout_constraintTop_toBottomOf="@+id/profile_pass_new_check_et" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/profile_info_cl"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/profile_info_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingVertical="10dp"
+                android:text="이용 약관"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/profile_info_back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/ic_left_24"
+                app:layout_constraintBottom_toBottomOf="@+id/profile_info_tv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/profile_info_tv" />
+            <ScrollView
+                android:id="@+id/profile_detail_info_sv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/profile_info_tv">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="10dp"
+                    android:text="@string/info"/>
+            </ScrollView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
